--- a/busstation.html
+++ b/busstation.html
@@ -9,7 +9,7 @@
   let ws;
 
   function initWebSocket() {
-    ws = new WebSocket('ws://localhost:3000'); // 여기서는 로컬호스트의 3000번 포트를 사용합니다.
+    ws = new WebSocket('ws://34.64.101.157:3000'); // 여기서는 로컬호스트의 3000번 포트를 사용합니다.
 
     ws.onopen = function() {
       console.log('WebSocket 연결 성립');
